# AllocatorBuilder

./: .clang-format  CMakeLists.txt  Doxyfile  EXAMPLES.md  README.md  TUTORIAL.md  _a_l_b_affix_allocator_8h_source.html  _a_l_b_aligned_mallocator_8h_source.html  _a_l_b_allocator_base_8cpp_source.html  _a_l_b_allocator_base_8h_source.html  _a_l_b_allocator_with_stats_8h_source.html  _a_l_b_bucketizer_8h_source.html  _a_l_b_cascading_allocators_8h_source.html  _a_l_b_fallback_allocator_8h_source.html  _a_l_b_free_list_8h_source.html  _a_l_b_helper_no_atomic_8h_source.html  _a_l_b_helper_stack_8h_source.html  _a_l_b_mallocator_8h_source.html  _a_l_b_memmory_corruption_detector_8h_source.html  _a_l_b_segregator_8h_source.html  _a_l_b_shared_cascading_allocators_8h_source.html  _a_l_b_shared_free_list_8h_source.html  _a_l_b_shared_heap_8h_source.html  _a_l_b_shared_helpers_8h_source.html  _a_l_b_stack_allocator_8h_source.html  _a_l_b_traits_8h_source.html  _e_x_a_m_p_l_e_s_8md_source.html  _r_e_a_d_m_e_8md_source.html  _t_u_t_o_r_i_a_l_8md_source.html  affix__allocator_8hpp_source.html  affix__helper_8hpp_source.html  aligned__mallocator_8hpp_source.html  allocator__base_8cpp_source.html  allocator__base_8hpp_source.html  allocator__with__stats_8hpp_source.html  annotated.html  annotated.js  array__creation__evaluator_8cpp_source.html  array__creation__evaluator_8hpp_source.html  atomic__shared__ptr_8h_source.html  (+575 more)
alb/: affix_allocator.hpp  aligned_mallocator.hpp  allocator_base.hpp  allocator_with_stats.hpp  bucketizer.hpp  cascading_allocator - Kopie.hpp  cascading_allocator.hpp  doxygroups.h  fallback_allocator.hpp  freelist.hpp  global_allocator.hpp  heap.hpp  mallocator.hpp  memory_corruption_detector.hpp  null_allocator.hpp  segregator.hpp  shared_heap.hpp  stack_allocator.hpp  stl_allocator.hpp  stl_allocator_adapter.hpp
alb/internal/: affix_helper.hpp  array_creation_evaluator.hpp  atomic_shared_ptr.h  block.hpp  dynastic.hpp  heap_helpers.hpp  noatomic.hpp  reallocator.hpp  shared_helpers.hpp  stack.hpp  traits.hpp
include/: ALBAffixAllocator.h  ALBAlignedMallocator.h  ALBAllocatorBase.h  ALBAllocatorWithStats.h  ALBBucketizer.h  ALBCascadingAllocators.h  ALBFallbackAllocator.h  ALBFreeList.h  ALBHelperNoAtomic.h  ALBHelperStack.h  ALBMallocator.h  ALBMemmoryCorruptionDetector.h  ALBSegregator.h  ALBSharedCascadingAllocators.h  ALBSharedFreeList.h  ALBSharedHeap.h  ALBSharedHelpers.h  ALBStackAllocator.h  ALBTestHelpers.h  ALBTraits.h  affix_allocator.hpp  aligned_mallocator.hpp  allocator_base.hpp  allocator_with_stats.hpp  bucketizer.hpp  cascading_allocator.hpp  doxygroups.h  fallback_allocator.hpp  freelist.hpp  mallocator.hpp  memory_corruption_detector.hpp  segregator.hpp  shared_heap.hpp  stack_allocator.hpp
include/internal/: noatomic.hpp  stack.hpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  classes_f.js  enums_0.js  enums_1.js  (+21 more)
source/: ALBAllocatorBase.cpp  CMakeLists.txt  allocator_base.cpp  array_creation_evaluator.cpp
test/: ALBAffixAllocatorTest.cpp  ALBAllocatorBaseTest.cpp  ALBAllocatorWithStatsTest.cpp  ALBBucketizerTest.cpp  ALBCascadingAllocatorsTest.cpp  ALBFallbackAllocatorTest.cpp  ALBFreeListTest.cpp  ALBMallocatorTest.cpp  ALBSegregatorTest.cpp  ALBSharedCascadingAllocatorsTest.cpp  ALBSharedFreeListTest.cpp  ALBSharedHeapTest.cpp  ALBStackAllocatorTest.cpp  ALBTestHelpers.cpp  ALBTestHelpers.h  ALBTestHelpersAffixGuard.h  ALBTestHelpersAlgorithm.h  ALBTestHelpersAllocatorBaseTest.h  ALBTestHelpersData.h  ALBTestHelpersThread.h  ALBTestHelpersUsedMemGenerator.h  AffixAllocatorTest.cpp  AllocatorBaseTest.cpp  AllocatorWithStatsTest.cpp  BucketizerTest.cpp  CMakeLists.txt  CascadingAllocatorsTest.cpp  FallbackAllocatorTest.cpp  FreeListTest.cpp  HeapTest.cpp  Main.cpp  MallocatorTest.cpp  MemoryTest.cpp  NullAllocatorTest.cpp  SegregatorTest.cpp  SharedHeapTest.cpp  StackAllocatorTest.cpp  main.cpp  util.hpp
test/TestHelpers/: Algorithm.h  AllocatorBaseTest.h  Base.cpp  Base.h  Data.h  Thread.h  UsedMemGenerator.h
util/gtest-1.7.0/: CMakeLists.txt
util/gtest-1.7.0/cmake/: internal_utils.cmake
